add font family to figures

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
                 <br>
                 <div class="menu col-md-12">
                     <div class="menu-overlay">
-                        <h1 class="text-center text-white" id="menu">Menu</h1>
+                        <h1 class="text-center text-black" id="menu">Menu</h1>
                         <div class="pizza-menu row text-center">
                             <figure class="col-sm-4">
                                 <img src="img/smallp.jpeg" alt="small-pizza" class="wiggle">
-                                <figcaption class="text-white">Regular<br>Ksh. 300</figcaption>
+                                <figcaption class="text-black">Small<br>Ksh. 300</figcaption>
                             </figure>
                             <figure class="col-sm-4">
                                 <img src="img/mediump.jpeg" alt="medium-pizza" class="wiggle">
-                                <figcaption class="text-white">Medium<br>Ksh. 600</figcaption>
+                                <figcaption class="text-black">Medium<br>Ksh. 600</figcaption>
                             </figure>
                             <figure class="col-sm-4">
-                                <img src="img/largep.jpeg" alt="large-pizza" class="wiggle">
-                                <figcaption class="text-white">Large<br>Ksh. 1200</figcaption>
+                                <img src="img/large.jpeg" alt="large-pizza" class="wiggle">
+                                <figcaption class="text-black">Large<br>Ksh. 1200</figcaption>
                             </figure>
                         </div>
                     </div>
