remove unwanted css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <script src="js/scripts.js"></script>
   <title>PizzaBite!</title>
 </head>
-<body>     
+<body> 
+        <nav class="nav">
+                <h1 id="piz-pap" class="">Pi<span id="spantext">zz</span>a Bite!</h1>
+        </nav>    
     <div class="welcome" id="welcome">
         <br>
         <div class="col-sm-12">
