add margin alignment

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body> 
         <nav class="nav">
-                <h1 id="piz-pap" class="">Pi<span id="spantext">zz</span>a Bite!</h1>
+                <h1 id="piz-pap" class="">Pi<span id="spantext">zz</span>a Bite</h1>
         </nav>    
     <div class="welcome" id="welcome">
         <br>
