--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <img src="img/p1.png" alt="chef-cartoon" class="karibu-img">
                 </div>
                 <div class="col-md-6 karibu-txt">
-                    <h1 class="text-center txt txt-big" id="h12">Welcome to <span class="pizz">Pizza </span><span class="exc">Bite!</span>
+                    <h1 class="text-center txt txt-big" id="hdf">Welcome to <span class="pizz">Pizza </span><span class="exc">Bite!</span>
                     </h1>
                     <p class="text-center txt">Tasty pizza for You! </p>
                     <p class="text-center txt">You Order,We deliver.</p>
